Fix for overlapping header on certain posts

--- a/src/app/components/post-details/post-details.component.css
+++ b/src/app/components/post-details/post-details.component.css
@@ -1,7 +1,5 @@
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default*/
-
-
 html{
   width: 100%;
   overflow: hidden;
@@ -23,11 +21,10 @@ body{
   box-sizing: border-box;
   display: block;
   position: relative;
-  padding: 0px;
   width: auto;
   height: 100%;
   background-color: white;
-  padding-top: 1.3em;
+  padding-top: 3.3em;
 }
 
 .column-body{
@@ -178,7 +175,7 @@ body{
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 550px) {
   .container{
-    padding-top: 1.8em;
+    padding-top: 3.3em;
   }
 
 }
@@ -192,7 +189,7 @@ body{
     width: 100%;
     height: 100%;
     background-color: white;
-    padding-top: 2.8em;
+    padding-top: 4em;
   }
 
   .column-body{
